--- a/index.html
+++ b/index.html
@@ -17,7 +17,155 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="header__container container">
+            <nav class="header__nav">
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#" class="header__link">Contacts</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Summary</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Skills</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Code</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Education</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Language</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 
+    <div class="main">
+        <div class="container">
+            <section class="profile section">
+                <!-- <div class="profile__container container"> -->
+                <div class="profile__row">
+                    <div class="profile__picture">
+                        <div class="profile__image">
+                            <img class="profile__logo" src="assets/img/avatar.jpg" alt="My avatar">
+                        </div>
+                    </div>
+                    <div class="profile__info info">
+                        <h1 class="info__title">IHOR ANDRIANOV</h1>
+                        <h3 class="info__subtitle">Junior Front-End Developer</h3>
+                    </div>
+                </div>
+                <!-- </div> -->
+            </section>
+
+            <section class="contacts section">
+                <h2 class="contacts__title title">Contacts</h2>
+                <ul class="contacts__list list">
+                    <li class="list__item">
+                        Email:
+                        <a class="list__link" href="mailto:icecrid@gmail.com">icecrid@gmail.com</a>
+                    </li>
+                    <li class="list__item">
+                        Phone:
+                        <a class="list__link" href="tel:+380675457754">+380675457754</a>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="summary section">
+                <h2 class="summary__title title">Summary</h2>
+                <p class="summary__text">
+                    I'm an enthusiastic and detail-oriented Frontend Software Engineer seeking an entry-level position with Company to use my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects. I have passion for responsive website design and a firm believer in the mobile-first approach.
+                </p>
+            </section>
+
+            <section class="skills section">
+                <h2 class="skills__title title">Skills</h2>
+                <ul class="skills__list list">
+                    <li class="list__item">
+                        Web-development:<span class="list__text">HTML, CSS, JavaScript</span>
+                    </li>
+                    <li class="list__item">
+                        Framework:<span class="list__text">Bootstrap</span>
+                    </li>
+                    <li class="list__item">
+                        Version control:<span class="list__text">GIT, Github</span>
+                    </li>
+                    <li class="list__item">
+                        Graphics:<span class="list__text">Figma</span>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="code section">
+                <h2 class="code__title title">Code</h2>
+                <pre class="code__pre">
+                    <code class="code__example">
+function multiply(a, b) {
+return a * b
+}
+                    </code>
+                </pre>
+            </section>
+
+            <section class="courses section">
+                <h2 class="courses__title title">Courses</h2>
+                <ul class="courses__list list">
+                    <li class="list__item">
+                        Udemy:<span class="list__text">WEB developer 2022</span>
+                    </li>
+                    <li class="list__item">
+                        Udemy:<span class="list__text">JavaScript for Beginners</span>
+                    </li>
+                    <li class="list__item">
+                        Udemy:<span class="list__text">The Complete Git Guide: Understand and master Git and GitHub</span>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="projects section">
+                <h2 class="projects__title title">Projects</h2>
+                <ul class="projects__list list">
+                    <li class="list__item">
+                        <span class="list__text">Notes App</span>
+                    </li>
+                    <li class="list__item">
+                        <span class="list__text">Simple To-Do List</span>
+                    </li>
+                    <li class="list__item">
+                        <span class="list__text">Weather App</span>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="education section">
+                <h2 class="education__title title">Education</h2>
+                <p class="education__establishment">Mykhailo Ostrohradskyi Kremenchuk National University</p>
+            </section>
+
+            <section class="english section">
+                <h2 class="english__title title">English</h2>
+                <p class="english__level">A2 - Pre-Intermediate</p>
+            </section>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer__container container">
+            <div class="footer__copyright copyright">
+                <p class="copyright__description">&copy; 2022</p>
+                <a class="copyright__link" href="https://github.com/icecrid" target="_blank">
+                    <img class="copyright__img" src="assets/img/github_icon.svg" alt="GitHub image">
+                </a>
+            </div>
+            <a class="footer__link" href="https://rs.school/js-stage0/" target="_blank">
+                <img class="footer__img" src="assets/img/rs_school_js.svg" alt="The Rolling Scopes image">
+            </a>
+        </div>
+    </div>
 </body>
 
 </html>
