feat: add navigation

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
             <nav class="header__nav">
                 <ul class="header__list">
                     <li class="header__item">
-                        <a href="#" class="header__link">Contacts</a>
+                        <a href="#contacts" class="header__link">Contacts</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Summary</a>
+                        <a href="#summary" class="header__link">Summary</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Skills</a>
+                        <a href="#skills" class="header__link">Skills</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Code</a>
+                        <a href="#code" class="header__link">Code</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Education</a>
+                        <a href="#courses" class="header__link">Courses</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Language</a>
+                        <a href="#english" class="header__link">English</a>
                     </li>
                 </ul>
             </nav>
@@ -47,7 +47,6 @@
     <div class="main">
         <div class="container">
             <section class="profile section">
-                <!-- <div class="profile__container container"> -->
                 <div class="profile__row">
                     <div class="profile__picture">
                         <div class="profile__image">
@@ -59,10 +58,9 @@
                         <h3 class="info__subtitle">Junior Front-End Developer</h3>
                     </div>
                 </div>
-                <!-- </div> -->
             </section>
 
-            <section class="contacts section">
+            <section id="contacts" class="contacts section">
                 <h2 class="contacts__title title">Contacts</h2>
                 <ul class="contacts__list list">
                     <li class="list__item">
@@ -76,14 +74,14 @@
                 </ul>
             </section>
 
-            <section class="summary section">
+            <section id="summary" class="summary section">
                 <h2 class="summary__title title">Summary</h2>
                 <p class="summary__text">
                     I'm an enthusiastic and detail-oriented Frontend Software Engineer seeking an entry-level position with Company to use my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects. I have passion for responsive website design and a firm believer in the mobile-first approach.
                 </p>
             </section>
 
-            <section class="skills section">
+            <section id="skills" class="skills section">
                 <h2 class="skills__title title">Skills</h2>
                 <ul class="skills__list list">
                     <li class="list__item">
@@ -101,7 +99,7 @@
                 </ul>
             </section>
 
-            <section class="code section">
+            <section id="code" class="code section">
                 <h2 class="code__title title">Code</h2>
                 <pre class="code__pre">
                     <code class="code__example">
@@ -112,7 +110,7 @@ return a * b
                 </pre>
             </section>
 
-            <section class="courses section">
+            <section id="courses" class="courses section">
                 <h2 class="courses__title title">Courses</h2>
                 <ul class="courses__list list">
                     <li class="list__item">
@@ -147,7 +145,7 @@ return a * b
                 <p class="education__establishment">Mykhailo Ostrohradskyi Kremenchuk National University</p>
             </section>
 
-            <section class="english section">
+            <section id="english" class="english section">
                 <h2 class="english__title title">English</h2>
                 <p class="english__level">A2 - Pre-Intermediate</p>
             </section>
