feat: add projects

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                         <a href="#courses" class="header__link">Courses</a>
                     </li>
                     <li class="header__item">
+                        <a href="#projects" class="header__link">Projects</a>
+                    </li>
+                    <li class="header__item">
                         <a href="#english" class="header__link">English</a>
                     </li>
                 </ul>
@@ -125,7 +128,7 @@ return a * b
                 </ul>
             </section>
 
-            <section class="projects section">
+            <section id="projects" class="projects section">
                 <h2 class="projects__title title">Projects</h2>
                 <ul class="projects__list list">
                     <li class="list__item">
